--- a/RaellShoes/RaellShoes.csproj
+++ b/RaellShoes/RaellShoes.csproj
@@ -17,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Views\Administrador\" />
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
